# chainlink-ccip

./: .gitignore  .golangci.yml  .goreleaser.yaml  .mockery.yaml  .pre-commit-config.yaml  .tool-versions  .yamllint.yml  1-5-1-pool-migration-plan.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  STRATEGY_REFACTOR.md  Taskfile.yaml  buf.ignore  buf.yaml  flake.nix  go.md  go.mod  go.sum  go.work  go.work.sum  modgraph  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rmn_offchain.proto  shell.nix
chains/solana/contracts/: .env.template  .prettierignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  flows.md
chains/solana/contracts/client-dummy-emitter/: README.md  main.go
chains/solana/contracts/crates/build-commit/: Cargo.toml
chains/solana/contracts/crates/build-commit/src/: lib.rs
chains/solana/contracts/crates/ccip-state/: Cargo.toml
chains/solana/contracts/crates/ccip-state/src/: lib.rs
chains/solana/contracts/crates/ccip_common/: Cargo.toml
chains/solana/contracts/crates/ccip_common/src/: lib.rs
chains/solana/contracts/crates/common/: Cargo.toml
chains/solana/contracts/crates/common/src/: v1.rs
chains/solana/contracts/programs/access-controller/: Cargo.toml
chains/solana/contracts/programs/access-controller/src/: lib.rs
chains/solana/contracts/programs/base-token-pool/: Cargo.toml
chains/solana/contracts/programs/base-token-pool-dummy-emitter/: Cargo.toml
chains/solana/contracts/programs/burnmint-token-pool/: Cargo.toml
chains/solana/contracts/programs/ccip-common/: Cargo.toml
chains/solana/contracts/programs/ccip-common/src/: lib.rs  (+3 more)
chains/solana/contracts/programs/ccip-invalid-receiver/: Cargo.toml
chains/solana/contracts/programs/ccip-offramp/: Cargo.toml  build.rs
chains/solana/contracts/programs/ccip-offramp-dummy-emitter/: Cargo.toml
chains/solana/contracts/programs/ccip-receiver/: Cargo.toml
chains/solana/contracts/programs/ccip-router/: Cargo.toml  README.md  build.rs
chains/solana/contracts/programs/ccip-router-dummy-emitter/: Cargo.toml  go.mod  go.sum
chains/solana/contracts/programs/cctp-message-transmitter-mock/: Cargo.toml
chains/solana/contracts/programs/cctp-token-messenger-minter-mock/: Cargo.toml
chains/solana/contracts/programs/cctp-token-pool/: Cargo.toml  build.rs
chains/solana/contracts/programs/example-burnmint-token-pool/: Cargo.toml
chains/solana/contracts/programs/example-ccip-receiver/: Cargo.toml
chains/solana/contracts/programs/example-ccip-sender/: Cargo.toml
chains/solana/contracts/programs/example-lockrelease-token-pool/: Cargo.toml
chains/solana/contracts/programs/execution-buffer/: Cargo.toml
chains/solana/contracts/programs/external-program-cpi-stub/: Cargo.toml
chains/solana/contracts/programs/fee-quoter/: Cargo.toml
chains/solana/contracts/programs/fee-quoter-dummy-emitter/: Cargo.toml
chains/solana/contracts/programs/lockrelease-token-pool/: Cargo.toml
chains/solana/contracts/programs/many-chain-multisig/: Cargo.toml
chains/solana/contracts/programs/mcm/: Cargo.toml  README.md
chains/solana/contracts/programs/mcm-dummy-emitter/: Cargo.toml
chains/solana/contracts/programs/ping-pong-demo/: Cargo.toml  README.md
chains/solana/contracts/programs/redirecting-ccip-receiver/: Cargo.toml
chains/solana/contracts/programs/rmn-remote/: Cargo.toml
chains/solana/contracts/programs/test-ccip-invalid-receiver/: Cargo.toml
chains/solana/contracts/programs/test-ccip-receiver/: Cargo.toml
chains/solana/contracts/programs/test-token-pool/: Cargo.toml
chains/solana/contracts/programs/test_event_emitter/: Cargo.toml
chains/solana/contracts/programs/timelock/: Cargo.toml  README.md
chains/solana/contracts/programs/timelock-dummy-emitter/: Cargo.toml
chains/solana/contracts/programs/token-pool/: Cargo.toml
chains/solana/contracts/programs/usdc-token-pool/: Cargo.toml
chains/solana/contracts/tests/: ccip_events.go  ccip_messages.go  ccip_router_test.go  ccip_transactions.go  lookuptable_test.go  mcm_set_root_execute_test.go  mcm_timelock_test.go  timelock.go  timelock_schedule_execute_test.go  tokenpool_test.go  txsizing_test.go
chains/solana/contracts/tests/accesscontroller/: access_controller.go
chains/solana/contracts/tests/ccip/: ccip_errors.go  ccip_events.go  ccip_messages.go  ccip_messages_test.go  ccip_router_e2e_test.go  ccip_router_test.go  ccip_send_devnet_test.go  ccip_transactions.go  cctp_accounts.go  cctp_pool_test.go  cctp_tp_devnet_test.go  devnet.config.yaml  devnet.config.yaml.example  devnet_config.go  devnet_config_test.go  devnet_setup_redirect_receiver_test.go  events_test.go  example_sender_devnet_test.go  send_message_example.sh.example  test_receiver_devnet_test.go  tokenpool.go  tokenpool_test.go  usdc_test.go
chains/solana/contracts/tests/cctp/: cctp.go
chains/solana/contracts/tests/config/: accesscontroller_config.go  ccip_config.go  config.go  mcm_config.go  programs.go  timelock_config.go
chains/solana/contracts/tests/devnet/: cctp_accounts.go  cctp_tp_devnet_test.go  devnet_config.go  usdc_test.go
chains/solana/contracts/tests/examples/: ping_pong_test.go  pools_test.go  receiver_test.go
chains/solana/contracts/tests/mcms/: mcm.go  mcm_errors.go  mcm_events.go  mcm_multiple_instances_test.go  mcm_multiple_multisigs_test.go  mcm_set_config_test.go  mcm_set_root_execute_test.go  mcm_timelock_test.go  mcms_self_ownership_test.go  mcms_tx_capacity_test.go  timelock.go  timelock_bypasser_execute_test.go  timelock_errors.go  timelock_events.go  timelock_multiple_instances_test.go  timelock_operations.go  timelock_rbac_test.go  timelock_schedule_execute_test.go
chains/solana/contracts/tests/testutils/: anchor.go  ccip.go  concurrency_group.go  localvalidator.go  ocr.go  project_path.go  wrapped.go
chains/solana/contracts/tests/utils/: anchor.go  anchor_test.go  localvalidator.go  logparser.go  logparser_test.go  lookuptable.go  ocr.go  project_path.go  token.go  transactions.go
chains/solana/sdk/: Cargo.toml
chains/solana/sdk/src/: ccip_handlers.rs  context.rs  discriminator.rs  lib.rs  messages.rs
(+6602 files in other folders)
