[workspace]
resolver = "2"
members = [
  "programs/*",
  "crates/*",
]

[workspace.dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", branch = "master", features = ["init-if-needed"] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", branch = "master" }
solana-program = "2"

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.test]
overflow-checks = true
