[package]
name = "burnmint-token-pool"
version = "1.6.1-candidate"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "burnmint_token_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", branch = "master", features = ["init-if-needed"] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", branch = "master" }
solana-program = "2"
spl-math = { version = "0.3.0", features = ["no-entrypoint"] }
base-token-pool = { version = "1.6.1-candidate", path = "../base-token-pool/", features = [
    "no-entrypoint",
] }
rmn_remote = { version = "1.6.1-candidate", path = "../rmn-remote", features = [
    "cpi",
] }
ccip_common = { version = "1.6.1-candidate", path = "../ccip-common" }

[build-dependencies]
build_commit = { path = "../../crates/build-commit" }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("anchor-debug", "custom-panic"))',
]
