[package]
name = "ccip_common"
version = "1.6.1-candidate"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ccip_common"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
# ccip-common is not to be deployed, so using the no-entrypoint feature
# prevents global allocator conflicts with its dependees.
default = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", tag = "v0.32.1", features = [
    "init-if-needed",
] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", tag = "v0.32.1" }
ethnum = "1.5"
solana-program = "2"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("anchor-debug", "custom-panic"))',
]
