[package]
name = "ccip_offramp"
version = "1.6.1-candidate"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ccip_offramp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "ccip_common/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", tag = "v0.32.1", features = [
    "init-if-needed",
] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", tag = "v0.32.1" }
bytemuck = "1.7"
ethnum = "1.5"
solana-program = "2"
solana-keccak-hasher = "2"
solana-secp256k1-recover = "2"
fee_quoter = { version = "1.6.1-candidate", path = "../fee-quoter", features = [
    "cpi",
] }
rmn_remote = { version = "1.6.1-candidate", path = "../rmn-remote", features = [
    "cpi",
] }
ccip_common = { version = "1.6.1-candidate", path = "../ccip-common" }

[dev-dependencies]
hex = "0.4.3"

[build-dependencies]
build_commit = { path = "../../crates/build-commit" }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("anchor-debug", "custom-panic", "custom-heap"))',
]
