[package]
name = "ccip_router"
version = "0.1.0-dev"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ccip_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = [
  "anchor-lang/idl-build", 
  "anchor-spl/idl-build",
]
default = []

[dependencies]
solana-program = "1.18.17" # recommended version for Anchor 0.30.1
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
bytemuck = "1.7"
ethnum = "1.5"
fee_quoter = {path = "../fee-quoter", features = ["cpi"]}

[dev-dependencies]
hex = "0.4.3"
