[package]
name = "cctp_message_transmitter_mock"
version = "0.1.0"
description = "Mock implementation of Message Transmitter for Cross-Chain Transfer Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cctp_message_transmitter_mock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
