[package]
name = "cctp_token_messenger_minter_mock"
version = "0.1.0"
description = "Mock implementation of Token Messenger Minter for Cross-Chain Transfer Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cctp_token_messenger_minter_mock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["event-cpi"] }
anchor-spl = "0.29.0"
cctp_message_transmitter_mock = { path = "../cctp-message-transmitter-mock", features = ["no-entrypoint", "cpi"] }
