[package]
name = "example_ccip_sender"
version = "0.1.0-dev"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example_ccip_sender"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = ["custom-heap"]
custom-heap = []

[dependencies]
solana-program = "2.1.0"
anchor-lang = { version = "0.31.0", features = [] }
anchor-spl = "0.31.0"
ccip_router = { version = "0.1.0-dev", path = "../ccip-router", features = ["no-entrypoint"]}
smalloc = "0.1.2"
