[package]
name = "example_ccip_sender"
version = "1.6.1-candidate"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example_ccip_sender"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["custom-heap"]
custom-heap = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
solana-program = "2"
anchor-lang = { git = "https://github.com/coral-xyz/anchor", branch = "master", features = [] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", branch = "master" }
ccip_router = { version = "1.6.1-candidate", path = "../ccip-router", features = [
    "no-entrypoint",
] }
smalloc = "0.1.2"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("anchor-debug", "custom-panic"))',
]
