[package]
name = "execution_buffer"
version = "0.1.0-dev"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "execution_buffer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.17.25" # pin solana to 1.17
anchor-lang = { version = "0.29.0" }
bytemuck = "1.7"
ccip_common = {path = "../ccip-common"}
ccip_offramp = {path = "../ccip-offramp", features = ["cpi"]}
