[package]
name = "fee_quoter"
version = "0.1.0-dev"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fee_quoter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
solana-program = "2.1.0"
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
bytemuck = "1.7"
ethnum = "1.5"
ccip_common = { version = "0.1.0-dev", path = "../ccip-common/", features = ["no-entrypoint"] }

[dev-dependencies]
hex = "0.4.3"

[build-dependencies]
build_commit = { path = "../../crates/build-commit" }
