[package]
name = "mcm"
version = "0.1.0-dev"
description = "SVM implementation of ManyChainMultiSig"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mcm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

[dev-dependencies]
hex = "0.4.3"
