[package]
name = "mcm"
version = "0.1.1"
description = "SVM implementation of ManyChainMultiSig"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mcm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

[dev-dependencies]
hex = "0.4.3"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic", "custom-heap"))']
