[package]
name = "mcm"
version = "0.1.1"
description = "SVM implementation of ManyChainMultiSig"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mcm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", branch = "master" }
solana-keccak-hasher = "3.1"
solana-secp256k1-recover = "2"

[dev-dependencies]
hex = "0.4.3"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic", "custom-heap"))']
