[package]
name = "ping_pong_demo"
version = "1.6.1-candidate"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ping_pong_demo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", tag = "v0.32.1", features = [
] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", tag = "v0.32.1" }
example_ccip_receiver = { path = "../example-ccip-receiver", features = [
    "no-entrypoint",
] }
ccip_router = { version = "1.6.1-candidate", path = "../ccip-router", features = [
    "cpi",
] }

[build-dependencies]
build_commit = { path = "../../crates/build-commit" }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("anchor-debug", "custom-panic", "custom-heap"))',
]
