[package]
name = "test_ccip_receiver"
version = "0.1.0-dev"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_ccip_receiver"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = [
  "anchor-lang/idl-build", 
  "anchor-spl/idl-build",
]
default = []

[dependencies]
solana-program = "1.18.17" # recommended version for Anchor 0.30.1
anchor-lang = { version = "0.30.1", features = [] }
anchor-spl = "0.30.1"
example_ccip_receiver = { version = "0.1.0-dev", path = "../example-ccip-receiver", features = ["no-entrypoint"] }
