[package]
name = "test-token-pool"
version = "0.1.1-dev"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_token_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
solana-program = "2.1.0"
spl-math = { version = "0.3.0", features = [ "no-entrypoint" ] }
base-token-pool = { version = "0.1.1-dev", path = "../base-token-pool/", features = ["no-entrypoint"] }
burnmint-token-pool = { version = "0.1.1-dev", path = "../burnmint-token-pool", features = ["no-entrypoint"] }
lockrelease-token-pool = { version = "0.1.1-dev", path = "../lockrelease-token-pool", features = ["no-entrypoint"] }
rmn_remote = { path = "../rmn-remote", features = ["cpi"] }
ccip_common = { path = "../ccip-common" }
