[package]
name = "test-token-pool"
version = "1.6.1-candidate"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_token_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "ccip_common/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", tag = "v0.32.1", features = [
    "init-if-needed",
] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", tag = "v0.32.1" }
spl-math = { version = "0.3.0", features = ["no-entrypoint"] }
base-token-pool = { version = "1.6.1-candidate", path = "../base-token-pool/", features = [
    "no-entrypoint",
] }
burnmint-token-pool = { version = "1.6.1-candidate", path = "../burnmint-token-pool", features = [
    "no-entrypoint",
] }
lockrelease-token-pool = { version = "1.6.1-candidate", path = "../lockrelease-token-pool", features = [
    "no-entrypoint",
] }
rmn_remote = { version = "1.6.1-candidate", path = "../rmn-remote", features = [
    "cpi",
] }
ccip_common = { version = "1.6.1-candidate", path = "../ccip-common" }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("anchor-debug", "custom-panic", "custom-heap"))',
]
