[package]
name = "token-pool"
version = "0.1.0-dev"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = [
  "anchor-lang/idl-build", 
  "anchor-spl/idl-build",
]
default = []

[dependencies]
solana-program = "1.18.17" # recommended version for Anchor 0.30.1
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
spl-math = { version = "0.3.0", features = [ "no-entrypoint" ] }
