[package]
name = "usdc-token-pool"
version = "0.1.0-dev"
description = "USDC Token Pool for CCIP utilizing CCTP"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "usdc_token_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
base-token-pool = { version = "0.1.0-dev", path = "../base-token-pool/", features = ["no-entrypoint"] }
burnmint-token-pool = { version = "0.1.0-dev", path = "../burnmint-token-pool", features = ["no-entrypoint"] }
ccip_common = {path = "../ccip-common"}
solana-program = "1.17.25"

[build-dependencies]
build-commit = { path = "../../crates/build-commit" }
